fix sqlx
