# app/api/auth.go
@@ -26,7 +26,6 @@ func (a *Auth) RegisterWithUAC(r gin.IRouter) {
 // Register 主路由必须包含UAC内容
 func (a *Auth) Register(r gin.IRouter) {
 	r.GET("authz", a.authorize)
-	r.GET("authz/signin", a.signin)
 }
 
 // @Param Authorization header string true "Bearer token"
@@ -43,18 +42,5 @@ func (a *Auth) Register(r gin.IRouter) {
 func (a *Auth) authorize(c *gin.Context) {
 	// 权限判断有UserAuthCasbinMiddleware完成
 	// 仅仅返回正常结果即可
-	helper.ResSuccess(c, "ok")
-}
-
-// Signin godoc
-// @Tags auth
-// @Summary Authorize
-// @Description 授权接口
-// @Accept  json
-// @Produce  json
-// @Security ApiKeyAuth
-// @Success 200 {object} helper.Success
-// @Router /authz/signin [get]
-func (a *Auth) signin(c *gin.Context) {
 	helper.ResSuccess(c, "ok")
 }
